# open_cyber_center

./: .gitignore  README.md  package-lock.json  package.json  privacy.txt  vite.config.ts
main_project/: package-lock.json  package.json  tailwind.config.cjs
main_project/occ/: .gitignore  package-lock.json  package.json  tailwind.config.cjs
main_project/occ_admin_dash/: package-lock.json  package.json
main_project/src/: App.vue  style.css
passwordTest/: mongoTest
pixabay-app/: README.md  package-lock.json  package.json
pixabay-app/src/: App.vue  main.js
prototypes/: Cargo.toml  temp.py
prototypes/Downloading Screen/: .taurignore  package-lock.json  package.json
prototypes/admin_accn_creation/: package-lock.json  package.json  postcss.config.cjs
prototypes/admin_app/: .gitignore  .taurignore  package-lock.json  package.json
prototypes/admin_app/src-tauri/: Cargo.toml  games.json  tauri.conf.json
prototypes/admin_app/src-tauri/src/: main.rs
prototypes/admin_app_rust/: .gitignore  Cargo.toml  output.json
prototypes/discord_api/: ReadMe
prototypes/firebase_login/: .firebaserc  README.md  index.html  package-lock.json  package.json
prototypes/firebase_login_jivey/: .gitignore  package.json  tailwind.config.cjs
prototypes/gdown_example/: Cargo.toml
prototypes/launch_game/: Cargo.toml
prototypes/loading_anim/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs
prototypes/main_screen/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
prototypes/main_screen/src-tauri/src/: main.rs
src-tauri/: tauri.conf.json
(+109 files in other folders)
